[package]
name = "axum-valid"
version = "0.10.1"
description = "Provides validation extractors for your Axum application to validate data using validator, garde, or both."
authors = ["GengTeng <me@gteng.org>"]
license = "MIT"
homepage = "https://github.com/gengteng/axum-valid"
repository = "https://github.com/gengteng/axum-valid"
documentation = "https://docs.rs/axum-valid"
keywords = [
    "axum",
    "validator",
    "extractor",
    "web",
]
categories = [
    "asynchronous",
    "network-programming",
    "web-programming",
]
edition = "2021"

[package.metadata.docs.rs]
features = ["all_types", "garde"]

[dependencies]
axum = { version = "0.6.20", default-features = false }
garde = { version = "0.15.0", optional = true }
validator = { version = "0.16.1", optional = true}
validify = { version = "1.0.12", optional = true }

[dependencies.axum_typed_multipart]
version = "0.10.0"
default-features = false
optional = true

[dependencies.axum-msgpack]
version = "0.3.0"
default-features = false
optional = true

[dependencies.axum-yaml]
version = "0.3.0"
default-features = false
optional = true

[dependencies.axum-extra]
version = "0.8.0"
default-features = false
optional = true

[dependencies.serde]
version = "1.0.188"
optional = true

[dev-dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.20", features = ["macros"] }
tokio = { version = "1.29.1", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
serde = { version = "1.0.188", features = ["derive"] }
validator = { version = "0.16.0", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
mime = "0.3.17"
prost = "0.12.1"
once_cell = "1.18.0"
rmp-serde = "1.1.2"

[features]
default = ["basic", "validator"]
basic = ["json", "form", "query"]
garde = ["dep:garde"]
validator = ["dep:validator"]
validify = ["dep:validify"]
json = ["axum/json"]
form = ["axum/form"]
query = ["axum/query"]
typed_header = ["axum/headers"]
typed_multipart = ["dep:axum_typed_multipart"]
msgpack = ["dep:axum-msgpack"]
yaml = ["dep:axum-yaml"]
into_json = ["json", "dep:serde"]
422 = []
extra = ["dep:axum-extra"]
extra_typed_path = ["extra", "axum-extra/typed-routing"]
extra_query = ["extra", "axum-extra/query"]
extra_form = ["extra", "axum-extra/form"]
extra_protobuf = ["extra", "axum-extra/protobuf"]
all_extra_types = ["extra", "extra_typed_path", "extra_query", "extra_form", "extra_protobuf"]
all_types = ["json", "form", "query", "typed_header", "typed_multipart", "msgpack", "yaml", "all_extra_types"]
full = ["validator", "all_types", "422", "into_json"]
full_garde = ["garde", "all_types", "422", "into_json"]
full_validify = ["validify", "all_types", "422", "into_json"]
