[package]
name = "axum-valid"
version = "0.24.0"
description = "Provides validation extractors for your Axum application, allowing you to validate data using validator, garde, validify or all of them."
authors = ["GengTeng <me@gteng.org>"]
license = "MIT"
homepage = "https://github.com/gengteng/axum-valid"
repository = "https://github.com/gengteng/axum-valid"
documentation = "https://docs.rs/axum-valid"
keywords = [
    "axum",
    "validator",
    "extractor",
    "garde",
    "validify",
]
categories = [
    "asynchronous",
    "network-programming",
    "web-programming",
]
edition = "2021"

[package.metadata.docs.rs]
features = ["full", "aide"]

[dependencies]
axum = { version = "0.8", default-features = false }
garde = { version = "0.22.0", optional = true }
validator = { version = "0.20.0", optional = true }
validify = { version = "2.0.0", optional = true }

[dependencies.axum-extra]
version = "0.10"
default-features = false
optional = true

[dependencies.axum-serde]
version = "0.9.0"
optional = true

[dependencies.axum_typed_multipart]
version = "0.16.3"
optional = true

[dependencies.serde]
version = "1.0.219"
optional = true

[dependencies.aide]
version = "0.15.0"
optional = true

[dev-dependencies]
anyhow = "1.0.87"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.3", features = ["json", "multipart"] }
serde = { version = "1.0.195", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
garde = { version = "0.22.0", features = ["serde", "derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.33"
quick-xml = { version = "0.37.1", features = ["serialize"] }
ciborium = { version = "0.2.2" }
toml = "0.8.14"
mime = "0.3.17"
prost = "0.13.4"
once_cell = "1.20.2"
rmp-serde = "1.3.0"

[features]
default = ["basic", "validator"]
basic = ["json", "form", "query"]
garde = ["dep:garde"]
validator = ["dep:validator"]
validify = ["dep:validify"]
json = ["axum/json"]
form = ["axum/form"]
query = ["axum/query"]
typed_header = ["extra", "axum-extra/typed-header"]
msgpack = ["dep:axum-serde", "axum-serde/msgpack"]
yaml = ["dep:axum-serde", "axum-serde/yaml"]
xml = ["dep:axum-serde", "axum-serde/xml"]
toml = ["dep:axum-serde", "axum-serde/toml"]
sonic = ["dep:axum-serde", "axum-serde/sonic"]
cbor = ["dep:axum-serde", "axum-serde/cbor"]
typed_multipart = ["dep:axum_typed_multipart"]
into_json = ["json", "dep:serde", "garde?/serde"]
422 = []
extra = ["dep:axum-extra"]
extra_typed_path = ["extra", "axum-extra/typed-routing"]
extra_query = ["extra", "axum-extra/query"]
extra_form = ["extra", "axum-extra/form"]
extra_protobuf = ["extra", "axum-extra/protobuf"]
all_extra_types = ["extra", "typed_header", "extra_typed_path", "extra_query", "extra_form", "extra_protobuf"]
all_types = ["json", "form", "query", "msgpack", "yaml", "xml", "toml", "sonic", "cbor", "all_extra_types", "typed_multipart"]
full_validator = ["validator", "all_types", "422", "into_json"]
full_garde = ["garde", "all_types", "422", "into_json"]
full_validify = ["validify", "all_types", "422", "into_json"]
full = ["full_validator", "full_garde", "full_validify"]
aide = ["dep:aide"]
